--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layoutChatActivity"
@@ -34,11 +35,13 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="40dp"
             android:id="@+id/editTextMessage"
             android:layout_weight="1"
-            android:background="@color/fontColorButtons" />
+            android:hint="@string/message"
+            android:background="@color/fontColorButtons"
+            tools:ignore="Autofill,TextFields" />
 
         <Button
             android:layout_width="40dp"
