--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginBottom">5dp</item>
         <item name="android:fontFamily">monospace</item>
@@ -29,7 +29,7 @@
         <item name="android:layout_width">40dp</item>
         <item name="android:backgroundTint">@drawable/btn_blue</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_marginRight">5dp</item>
         <item name="android:fontFamily">monospace</item>
@@ -46,7 +46,7 @@
         <item name="android:layout_marginTop">25dp</item>
         <item name="android:fontFamily">casual</item>
         <item name="android:textColor">@color/titleColor</item>
-        <item name="android:textSize">45dp</item>
+        <item name="android:textSize">45sp</item>
         <item name="android:textStyle">bold</item>
 
 
@@ -59,7 +59,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">casual</item>
         <item name="android:textColor">@color/fontColorButtons</item>
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:textStyle">italic</item>
 
 
@@ -71,7 +71,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">times</item>
         <item name="android:textColor">@color/fontColorButtons</item>
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">italic</item>
 
 
@@ -83,7 +83,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">times</item>
         <item name="android:textColor">@color/fontColorButtons</item>
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">normal</item>
 
 
