--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="50dp"
     android:layout_marginBottom="50dp"
     android:orientation="vertical">
@@ -11,7 +10,7 @@
             android:id="@+id/senderInfo"
             style="@style/textChatSender"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
+            android:layout_height="wrap_content"/>
 
 
 
@@ -19,6 +18,6 @@
             android:id="@+id/senderMessage"
             style="@style/textChatMessage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
+            android:layout_height="wrap_content"/>
 
 </LinearLayout>
